# job-scraper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 40d9cb9fdf21_initial_migration.py  5af81b26deb7_add_timestamp_to_last_atempt_at_column_.py  92bf8c403770_change_time_fields_for_all_tables.py
src/job-scraper/: main.py
src/job-scraper/scrapers/: indeed.py
src/job-scraper/utils/: logger.py
src/jobscraper/: main.py
src/jobscraper/api/: api.py  bot.py  main.py
src/jobscraper/bot/: __init__.py  messages.py  middleware.py  subscription_service.py
src/jobscraper/bot/handlers/: __init__.py  categories.py  errors.py  help.py  list_subscriptions.py  start.py  subscribe.py  unsubscribe.py
src/jobscraper/config/: env.py  scraping_config.py
src/jobscraper/models/: job.py  users.py
src/jobscraper/pipelines/: dispatch_pipeline.py  scrape_pipeline.py
src/jobscraper/scrapers/: indeed.py
src/jobscraper/services/: notification_processor.py  notification_service.py  scraping_orchestrator.py  scraping_service.py
src/jobscraper/storage/: mappers.py  models.py  repository.py  session.py  sqlite_init.py
src/jobscraper/utils/: logger.py
tests/api/: test_api.py
tests/bot/: test_subscription_service.py
tests/bot/handlers/: test_errors.py  test_subscribe.py  test_unsubscribe.py
tests/scrapers/: test_indeed.py
tests/services/: test_notification_service.py  test_scraping_service.py
tests/storage/: test_repository.py
