[project]
name = "jobscraper"
version = "0.1.0"
description = "Pipeline for scraping job postings"
authors = [
    {name = "Tomasz Duchnowski",email = "entidzow@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.9,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.black]
target-version = ['py313']
