[project]
name = "jobscraper"
version = "0.1.0"
description = "Pipeline for scraping job postings"
authors = [
    {name = "Tomasz Duchnowski",email = "entidzow@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "aiogram (>=3.27.0,<4.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "aiolimiter (>=1.2.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
dev = [
    "ruff (>=0.15.9,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
]

[tool.black]
target-version = ['py313']
